--- a/src/component/Hero/Hero.css
+++ b/src/component/Hero/Hero.css
@@ -68,10 +68,12 @@
 }
 
 .social-icon img{
-  height: 35px;
-  margin: 10px;
+  height: 45px;
+  margin: 3px;
   border-radius: 50px;
   z-index: 1;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
+  border: 2px solid white;
+  margin-left: 5px;
 }
