--- a/src/component/Skills/Skills.css
+++ b/src/component/Skills/Skills.css
@@ -1,21 +1,32 @@
 .container{
-  background-color: black;
-  color: white;
+   background-color: black;
   display: flex;
-  justify-content:start;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 60px;
-  text-align: center;
-  padding-left: 25%;
-  
+  gap: 30px;
+  margin: auto;
+  padding-top: 10px;
 }
 
 .skill-icon img{
-    height: 50px;
-    border-radius: 25px;
+  height: 100px;
+  width: 100x;
+  object-fit: contain;
+  background: black;
+  box-shadow: none;
 }
 
 .skill-icon{
     display: flex;
-    justify-content: space-around;
-    z-index: 1;
+  justify-content: center;
+  align-items: center;
+  gap: 90px;
+  background-color: black;
+}
+
+
+.container h1{
+  font-size: 35px;
 }
