--- a/src/component/Hero/Hero.css
+++ b/src/component/Hero/Hero.css
@@ -3,14 +3,15 @@
   color: white;
   display: flex;
   justify-content:start;
-  padding: 60px;
   text-align: center;
-  padding-left: 25%;
-  margin-top: 50px;
+  padding-left: 15%;
+  margin-top: 70px;
+  align-items:center;
 }
 
 
 .hero-container p{
+  font-size: 18px;
   text-align: left;
   color: rgb(203, 198, 198);
   font-weight: 400;
@@ -23,19 +24,20 @@
 }
 
 .hero-btn{
+  border-top: none;
   height: 30px;
   border: none;
   border-radius: 5px;
   background-color: white;
   color: black;
   display: flex;
- padding: 10px;
+  padding: 10px;
   align-items: center;
   margin: 10px;
   margin-left: 0;
   cursor: pointer;
   border-bottom: 3px  solid transparent;
-  background-image: linear-gradient(#fff,white), linear-gradient(to right,transparent,#ff00cc,#3333ff);
+  background-image: linear-gradient(#fff,white), linear-gradient(to right,transparent,#6c63ff,white);
   background-origin: border-box;
   background-clip: padding-box,border-box;
 }
@@ -50,11 +52,12 @@
 }
 
 .hero-btn:nth-child(2){
+  width: 130px;
   background-color: black;
   color: white;
   border-top: 1px solid gray;
    border-bottom: 3px  solid transparent;
-  background-image: linear-gradient(black,black), linear-gradient(to right,transparent,#ff00cc,#3333ff);
+  background-image: linear-gradient(black,black), linear-gradient(to right,transparent,#6c63ff,white);
   background-origin: border-box;
   background-clip: padding-box,border-box;
 }
@@ -65,15 +68,22 @@
 
 .social-icon{
   display: flex;
+  gap: 10px;
 }
 
 .social-icon img{
   height: 45px;
+  width: 45px;
   margin: 3px;
   border-radius: 50px;
   z-index: 1;
-  border: 1px solid black;
+  fill: white;
   background-color: white;
-  border: 2px solid white;
   margin-left: 5px;
+  padding: 0;
+}
+
+.social-icon:nth-child(2) img{
+  border: 4px solid white;
+
 }
